added the swagger for roles and changed syntax problems
