# timemanager-api/lib/timemanager_web/Swagger/team_swagger.ex
@@ -36,16 +36,27 @@ defmodule TimemanagerWeb.Swagger.TeamSwagger do
     quote do
       swagger_path :index do
         get "/api/teams"
-        description "List all team"
+        description "List all teams"
         produces "application/json"
         tag "Teams"
         response 200, "Success"
         response 400, "Client Error"
       end
 
+      swagger_path :show do
+        get "/api/teams/{id}"
+        description "Get a team by id"
+        produces "application/json"
+        tag "Teams"
+        parameter :id, :path, :integer, "Team ID", required: true
+        response 200, "Success"
+        response 400, "Client Error"
+        response 404, "No Team found with this ID"
+      end
+
       swagger_path :manager do
         get "/api/teamsmanager/{manager_id}"
-        description "get teams by manager's id"
+        description "get a team by manager's id"
         produces "application/json"
         tag "Teams"
         parameter :manager_id, :path, :integer, "manager ID", required: true
@@ -54,16 +65,6 @@ defmodule TimemanagerWeb.Swagger.TeamSwagger do
         response 404, "No Team found with this ID"
       end
 
-      swagger_path :show do
-        get "/api/teams/{id}"
-        description "Get team by id"
-        produces "application/json"
-        tag "Teams"
-        parameter :id, :path, :integer, "Team ID", required: true
-        response 200, "Success"
-        response 400, "Client Error"
-        response 404, "No Team found with this ID"
-      end
 
       swagger_path :create do
         post "/api/teams"
@@ -92,8 +93,7 @@ defmodule TimemanagerWeb.Swagger.TeamSwagger do
 
       swagger_path :delete do
         PhoenixSwagger.Path.delete "/api/teams/{id}"
-        summary "Delete Team"
-        description "Delete a Team by ID"
+        description "Delete a team by ID"
         tag "Teams"
         parameter :id, :path, :integer, "Team ID", required: true, example: 3
         response 204, "No Content - Deleted Successfully"
